Implements basic but working discord auth endpoints
